Refactor constructors of fillers and make tests pass